# openid4vc

./: Cargo.toml
dif-presentation-exchange/: Cargo.toml
oid4vc-core/: Cargo.toml
oid4vc-core/src/: decoder.rs  error.rs  jwt.rs  lib.rs  subject_syntax_type.rs  test_utils.rs
oid4vc-core/src/authentication/: sign.rs  subject.rs  validator.rs  verify.rs
oid4vc-manager/: Cargo.toml
oid4vc-manager/src/: error.rs  lib.rs
oid4vc-manager/src/managers/: credential_issuer.rs  provider.rs  relying_party.rs
oid4vc-manager/src/methods/: iota_method.rs  key_method.rs
oid4vc-manager/tests/common/: mod.rs
oid4vc-manager/tests/siopv2/: implicit.rs
oid4vc-manager/tests/siopv2_oid4vp/: implicit.rs
oid4vp/src/: oid4vp_params.rs
siopv2/: Cargo.toml
siopv2/src/: provider.rs  relying_party.rs  test_utils.rs
siopv2/src/request/: mod.rs
