[package]
name = "oid4vc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
thiserror.workspace = true
serde_json = "1.0"
serde_with = "2.3"
# anyhow = "1.0.70"
getset = "0.1.2"
jsonwebtoken = "8.2.0"
base64-url = "2.0.0"
async-trait = "0.1.68"
is_empty = "0.2.0"
rand = "0.7"

[dev-dependencies]
tokio.workspace = true
identity_did = { version = "=0.7.0-alpha.7" }
ed25519-dalek = "1.0.1"
lazy_static = "1.4.0"
derivative = "2.2.0"
anyhow = "1.0"
